# motleycrew

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-extra.txt
.github/workflows/: build.yml  integration_test.yml  integration_test_minimal.yml  integration_test_workflow.yml  integration_tests.yml  integration_tests_minimal.yml  minimal_integration_tests.yml  publish.yml  test.yml
docs/: requirements.txt
docs/source/: advanced_api.rst  agents.rst  another_llm.nblink  api.rst  autogen.rst  basic_api.nblink  caching_observability.nblink  choosing_llms.rst  conf.py  examples.rst  index.rst  install_pandoc.py  installation.rst  key_concepts.rst  key_value_store.rst  kg_api.nblink  knowledge_graph.nblink  quickstart.nblink  quickstart.rst  usage.rst
examples/: Advanced output handling.ipynb  Basic introduction.ipynb  Blog with Images.ipynb  Caching and observability.ipynb  Event-driven orchestration for AI systems.ipynb  Interaction with the knowledge graph.ipynb  Key Concepts and API.ipynb  Math via python code with a single agent.ipynb  MotleyTool for AutoGen agents.ipynb  Multi-step research agent.ipynb  Output handlers for validating agent output.ipynb  Quickstart.ipynb  Streaming agent output.ipynb  Tracing and caching.ipynb  Using AutoGen chats with motleycrew.ipynb  Using AutoGen conversations with motleycrew.ipynb  Using AutoGen with motleycrew.ipynb  Using another LLM.ipynb  Validating agent output.ipynb  __init__.py  _test_single_llama_index.py  _test_single_openai_tools_react.py  aider_code_generation.py  aider_example.py  blog_with_images.ipynb  blog_with_images.nblink  crewai_output_handler.py  delegation_crewai.ipynb  delegation_crewai.py  delegation_demo.py  dummy.py  hacking dependencies.ipynb  image_generation_crewai.ipynb  image_generation_crewai.py  key_value_store.py  llama_index_output_handler.py  math_crewai.ipynb  math_crewai.py  output_handler.py  research_agent.py  (+9 more)
examples/blog_post/: blog_post.py  blog_post_input.py
examples/old/: delegation_crewai.py  image_generation_crewai.py  math_crewai.py  research_agent.py  single_llama_index.py
examples/research_agent/: answer_orchestrator.py  question_answerer.py  question_generator.py  question_inserter.py  question_orchestrator.py  question_prioritizer.py  question_struct.py  research_agent.py  research_agent_main.py  retriever_tool.py
examples/storage/: docstore.json  index_store.json
motleycrew/: __init__.py  crew.py
motleycrew/agent/: coordinator.py  parent.py  shared.py
motleycrew/agents/: __init__.py  abstract_parent.py  mixins.py  output_handler.py  parent.py
motleycrew/applications/: __init__.py
motleycrew/caching/: __init__.py  caching.py  http_cache.py  utils.py
motleycrew/caсhing/: __init__.py  caching.py  http_cache.py
motleycrew/common/: __init__.py  aux_prompts.py  defaults.py  enums.py  exceptions.py  llms.py  logging.py  types.py  utils.py
motleycrew/crew/: __init__.py  crew.py  crew_threads.py
motleycrew/runnable/: __init__.py  runnable.py
motleycrew/storage/: __init__.py  graph_node.py  (+4 more)
tests/: run_integration_tests.py
(+234 files in other folders)
