[tool.poetry]
name = "motleycrew"
version = "0.1.12"
description = "A lightweight agent interaction framework."
authors = ["MotleyCrew <github@motleycrew.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
langchain = "^0.2"
crewai = { version = "^0.41", optional = true }
setuptools = "^67.6.2"
duckduckgo-search = "5.3.0b4"
llama-index = { version = "^0.10.27", optional = true }
langchain-experimental = "^0.0.62"
python-dotenv = "^1.0.0"
lunary = {version = "^1.1", optional = true}
langchainhub = "^0.1.15"
kuzu = "^0.4.2"
cloudpickle = "^3.0.0"
platformdirs = "^4.2.1"
pydantic = "^2.7.1"
# TODO: The following dependencies for caching package should be optional
requests = "^2.31.0"
curl-cffi = "^0.6.4"
httpx = "^0.27.0"
motleycache = "^0.0.4"
pglast = {version = "^6.2", optional = true}
langchain-openai = "^0.1.22"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
nbsphinx = "^0.9.4"
pypandoc_binary = "^1.13"
ipykernel = "^6.29.4"
nbsphinx-link = "^1.3.0"
nbformat = "^5.10.4"

[tool.poetry.extras]
crewai = ["crewai"]
llama-index = ["llama-index"]
lunary = ["lunary"]
pglast = ["pglast"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
